# esp32-test-task

./: CMakeLists.txt  README.md
main/: CMakeLists.txt  Kconfig.projbuild  init.c
main/receiver/: message_handler.c  message_handler.h  multicast_listener.c  multicast_listener.h  receiver_wifi_station.c  receiver_wifi_station.h
main/sender/: multicast_publisher.c  multicast_publisher.h  wifi_ap.c  wifi_ap.h
